--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@jamescoyle/vue-icon": "^0.1.0",
     "@mdi/js": "^5.9.55",
+    "@petfinder/petfinder-js": "^1.0.6",
     "@tailwindcss/postcss7-compat": "^2.1.2",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
